--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* COMMON STYLE  */
+.wrapper {
+  @apply container mx-auto px-5 md:px-0;
+}
+
+.eq {
+  transition: 300ms cubic-bezier(0.25, 1, 0.5, 1);
+}
+
+/* LINK STYLE  */
+.link-item {
+  @apply relative;
+}
+.link-item::after {
+  @apply content-[''] absolute left-1/2 -translate-x-1/2 bottom-0 w-0 h-px bg-dark eq;
+}
+
+.link-item:hover::after {
+  @apply w-full;
+}
